// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer component > should match a snapshot when closed 1`] = `<DocumentFragment />`;

exports[`Drawer component > should match a snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-deprecated-drawer-bg"
  />
  <div
    class="el-is-active el-deprecated-drawer"
  >
    <div
      class="mocked-styled-2 el-deprecated-drawer-header"
    >
      <div>
        <div
          class="mocked-styled-4 el-deprecated-drawer-title"
        >
          test
        </div>
      </div>
      <svg
        class="el-icon"
        color="secondary"
        data-size="md"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12.36 13.83 5.66 5.66a1 1 0 1 0 1.41-1.41l-5.66-5.66 5.66-5.66a1 1 0 1 0-1.41-1.41l-5.66 5.66L6.7 5.35a1 1 0 0 0-1.41 0 1 1 0 0 0 0 1.41l5.66 5.66-5.66 5.66a1 1 0 0 0 0 1.41 1 1 0 0 0 1.41 0z"
        />
      </svg>
    </div>
    <div
      class="mocked-styled-5 el-deprecated-drawer-body"
    >
      Content within Drawer
    </div>
  </div>
</DocumentFragment>
`;

exports[`DrawerBg > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-drawer-bg"
  >
    Content within Drawer
  </div>
</DocumentFragment>
`;

exports[`DrawerBody > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-5 el-deprecated-drawer-body"
  >
    Content within Drawer
  </div>
</DocumentFragment>
`;

exports[`DrawerContainer > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-deprecated-drawer"
  >
    Content within Drawer
  </div>
</DocumentFragment>
`;

exports[`DrawerHeader > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-deprecated-drawer-header"
  >
    Content within Drawer
  </div>
</DocumentFragment>
`;

exports[`DrawerSubtitle > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-deprecated-drawer-subtitle"
  >
    Content within Drawer
  </div>
</DocumentFragment>
`;

exports[`DrawerTitle > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 el-deprecated-drawer-title"
  >
    Content within Drawer
  </div>
</DocumentFragment>
`;
